<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Wishes</string>

    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>

    <!-- WishListMainActivity -->
    <string name="my_profile">My profile</string>
    <string name="my_wish_lists">My wish lists</string>
    <string name="tips_friends">Tips friends</string>
    <string name="friends_wish_lists">Friends\' wish lists</string>

    <!-- LogInActivity -->
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="log_in_error_message">Invalid user name or password.</string>
    <string name="found_user">Welcome!</string>
    <string name="no_connection_error_message">Couldn\'t contact server.</string>

    <!-- RegisterUserActivity -->
    <string name="register_user">Register new user</string>
    <string name="email">Email:</string>
    <string name="mobile_number">Mobile number:</string>
    <string name="user_name_error_message">Invalid user name!</string>
    <string name="password_error_message">Invalid password! Must be at least 8 characters.</string>
    <string name="email_error_message">Invalid email!</string>
    <string name="mobile_error_message">Invalid mobile number! Must be 8 digits.</string>
    <string name="user_registered">You were registered. Welcome!</string>
    <string name="registration_error_message">An error occurred. Try another user name.</string>
    <string name="get_user_error_message">An error occurred. User not found.</string>
    <string name="json_exception">An error occurred.</string>

    <!-- ProfileActivity -->
    <string name="edit_profile">Edit profile</string>
    <string name="main_menu">Main menu</string>
    <string name="delete_user">Delete profile</string>
    <string name="delete_profile_dialog_message">Are you sure you want to delete yourself from this app? All your wishlists will be deleted.</string>
    <string name="profile_deleted">Your profile was successfully deleted.</string>
    <string name="profile_deleted_error_message">An error occurred. Profile not deleted.</string>

    <!-- EditProfileActivity -->
    <string name="save_profile">Save changes</string>
    <string name="update_user_error_message">An error occurred. User information not updated.</string>
    <string name="user_updated">User information successfully updated.</string>

    <!-- SettingsActivity -->
    <string name="change_language_title">Language</string>

    <!-- NewWishListDialog -->
    <string name="create">Create</string>

    <!-- DeleteWishListDialog -->
    <string name="delete">Delete</string>

    <!-- MyWishListsActivity -->
    <string name="new_list_dialog_message">Name of new wish list:</string>
    <string name="wish_list_added">New wish list added.</string>
    <string name="wish_list_added_error_message">An error occurred. No wish list added.</string>
    <string name="wish_list_deleted">The wish list was successfully deleted.</string>
    <string name="wish_list_deleted_error_message">An error occurred. Wish list not deleted.</string>
    <string name="delete_list_dialog_message">Do you want to delete the wish list</string>
    <string name="get_wish_list_error_message">An error occurred. Wish lists not found.</string>
    <string name="wish_lists">Wish lists</string>

    <!-- EditWishListActivity -->
    <string name="edit_wish_list">Add wishes</string>
    <string name="get_wish_error_message">An error occurred. Wishes not found.</string>
    <string name="delete_wish_dialog_message">Do you want to delete the wish</string>
    <string name="wish_deleted">The wish was successfully deleted.</string>
    <string name="wish_deleted_error_message">An error occurred. Wish not deleted.</string>
    <string name="edit_list_name_dialog_message">Edit wish list name:</string>

    <!-- EditWishActivity -->
    <string name="edit_wish">Edit wish</string>
    <string name="wish_updated">The wish was successfully updated.</string>
    <string name="wish_updated_error_message">An error occurred. The wish was not updated.</string>
    <string name="save_wish">Save changes</string>

    <!-- NewWishActivity -->
    <string name="new_wish">New wish</string>
    <string name="name">Name:</string>
    <string name="spesification">Description:</string>
    <string name="link">Link:</string>
    <string name="price">Price:</string>
    <string name="where">Buy it here:</string>
    <!--<string name="image">Image:</string>-->
    <string name="wish_registered">The wish was registered.</string>
    <string name="wish_registered_error_message">An error occurred. Wish not registered.</string>
    <string name="name_error_message">Invalid name. Must be between 2 and 30 characters.</string>
    <string name="price_error_message">Invalid price. Use decimal dot.</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_description">Picture of wish</string>

    <!-- EditWishListNameDialog -->
    <string name="save">Save</string>
    <string name="list_name_updated">The wish list name was successfully updated.</string>
    <string name="list_name_updated_error_message">An error occurred. Wish list name not updated.</string>

    <!-- WishActivity -->
    <string name="wish">Wish</string>
    <string name="wish_error_message">An error occurred. Wish not found.</string>
    <string name="back_to_wish_list">Back to the wish list</string>

    <!-- FriendsWishListsActivity -->
    <string name="find">Find friends</string>
    <string name="friends_wish_lists_access">Wish lists you have access to:</string>
    <string name="find_friends">Find friends\' wish lists</string>
    <string name="received_requests">Received requests</string>
    <string name="wish_list_error_message">An error occurred. Wish list not found.</string>

    <!-- WatchWishListActivity -->
    <string name="friend_wish_list">Your friend\'s wish list</string>

    <!-- FindFriendsActivity -->
    <string name="user_error_message">An error occurred. Users not found.</string>
    <string name="request_dialog_message">Do you want to send a request to the owner to get access to this wish list?</string>
    <string name="sharing_added">Request sent.</string>
    <string name="sharing_added_error_message">An error occurred. The request wasn\'t sent.</string>
    <string name="user_name_search">User name (must be complete):</string>
    <string name="no_wish_lists">This user has no wish lists.</string>
    <string name="no_user">No user with this user name.</string>
    <string name="sms_message">Hello! I would like to have access to one of your wish lists. Confirm my request in your My Wishes-app.</string>
    <string name="sms_dialog_message">Do you want to send an SMS to notify the owner that you want access to this wish list?</string>
    <string name="sms_sent">SMS was sent.</string>
    <string name="request_exists">Request is already sent.</string>
    <string name="cannot_search_your_own_user_name">You cannot search for yourself.</string>

    <!-- RequestDialog -->
    <string name="send">Send</string>

    <!-- ReceivedRequestsActivity -->
    <string name="requests">Requests</string>
    <string name="get_sharing_error_message">An error occurred. Requests not found.</string>
    <string name="confirm_message">Do you want to allow this user to access this wish list?</string>
    <string name="sharing_deleted">The request was deleted.</string>
    <string name="sharing_deleted_error_message">An error occurred. The request was not deleted.</string>
    <string name="delete_request_dialog_message">Do you want to delete this request?</string>

    <!-- ConfirmRequestDialog -->
    <string name="confirm">Allow access</string>
    <string name="sharing_updated">The request is confirmed.</string>
    <string name="sharing_updated_error_message">An error occurred. The request wasn\'t confirmed.</string>

    <!-- WatchWishActivity -->
    <string name="bought">Bought:</string>
    <string name="buy">Mark as bought</string>
    <string name="buy_message">Are you sure you want to mark this wish as bought? (You can\'t change it later)</string>
    <string name="wish_already_bought">This wish is already bought.</string>
    <string name="wish_bought">You have bought this wish.</string>
    <string name="wish_bought_error_message">An error occurred. The wish couldn\'t be marked as bought.</string>

    <!-- TipsFriendsActivity -->
    <string name="tip_a_friend">Tip a friend</string>
    <string name="received_tips">Received tips</string>
    <string name="get_tips_error_message">An error occurred. Received tips not found.</string>
    <string name="delete_tip_dialog_message">Do you want to delete the tip</string>
    <string name="tip_deleted">The tip was successfully deleted.</string>
    <string name="tip_deleted_error_message">An error occurred. Tip not deleted.</string>

    <!-- NewTipActivity -->
    <string name="new_tip">New tip</string>
    <string name="tip_registered">The tip has been sent.</string>
    <string name="tip_registered_error_message">An error occurred. The tip wasn\'t sent.</string>
    <string name="send_tip">Send tip</string>
    <string name="tip_sms_dialog_message">Do you want to send an SMS to notify the receiver of this tip?</string>
    <string name="tip_sms_message">Hello! I have sent you a wish tip. Check your My Wishes-app.</string>

    <!-- TipActivity -->
    <string name="tip">Tip</string>
    <string name="tip_sender">Tip sent by:</string>
    <string name="back_to_tips">Back to all tips</string>
    <string name="get_tip_error_message">An error occurred. Tip not found.</string>

    <!-- SMSDialog -->
    <string name="no">No</string>

</resources>