<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterUserActivity"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" >

    <TextView
        android:labelFor="@+id/userNameRegister"
        android:text="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:id="@+id/userNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/passwordRegister"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/emailRegister"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/mobileNumberRegister"
        android:text="@string/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="phone"
        android:id="@+id/mobileNumberRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerNewUser"
        android:textAllCaps="false"
        android:background="@drawable/shape_register_button" />

    <Button
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelNewUser"
        android:textAllCaps="false"
        android:background="@drawable/shape_cancel_button" />
    
</LinearLayout>