<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditWishActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_gravity="center" >

        <!-- How take a picture? Upload from camera or take picture from here? -->
        <!--<ImageView
            android:id="@+id/wishImage"
            android:contentDescription="@string/image_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

        <TextView
            android:text="@string/name"
            android:labelFor="@+id/wishNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:id="@+id/wishNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/spesification"
            android:labelFor="@+id/wishSpesificationEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:id="@+id/wishSpesificationEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/where"
            android:labelFor="@+id/wishWhereEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:id="@+id/wishWhereEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/link"
            android:labelFor="@+id/wishLinkEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="text"
            android:id="@+id/wishLinkEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/price"
            android:labelFor="@+id/wishPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/wishPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveEditWish"
            android:textAllCaps="false"
            android:background="@drawable/shape_register_button" />

        <Button
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backToWish"
            android:textAllCaps="false"
            android:background="@drawable/shape_cancel_button" />

    </LinearLayout>

</ScrollView>