<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogInActivity"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" >

    <TextView android:text="@string/app_name"
        android:typeface="serif"
        android:textSize="@dimen/header_main_text_size"
        android:textColor="@color/header_main_text_color"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/header_log_in_padding_bottom"
        android:paddingTop="@dimen/header_log_in_padding_top" />

    <TextView
        android:text="@string/user_name"
        android:labelFor="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/password"
        android:labelFor="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:background="@drawable/shape_log_in_button"
        android:layout_margin="@dimen/button_margin"
        android:textAllCaps="false" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registerNewUser"
        android:background="@drawable/shape_register_button"
        android:layout_margin="@dimen/button_margin"
        android:textAllCaps="false" />

</LinearLayout>