<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewTipActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin" >

        <!-- How take a picture? Upload from camera or take picture from here? -->
        <!--<ImageView
            android:id="@+id/tipImage"
            android:contentDescription="@string/image_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

        <!--<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:labelFor="@+id/tipName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/tipName"
                android:inputType="text"
                android:layout_width="@dimen/name_edit_width"
                android:layout_height="wrap_content" />

        </LinearLayout>-->

        <TextView
            android:text="@string/name"
            android:labelFor="@+id/tipName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tipName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/spesification"
            android:labelFor="@+id/tipSpesification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tipSpesification"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/where"
            android:labelFor="@+id/tipWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tipWhere"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/link"
            android:labelFor="@+id/tipLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tipLink"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/price"
            android:labelFor="@+id/tipPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tipPrice"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registerNewTip"
            android:textAllCaps="false"
            android:background="@drawable/shape_register_button" />

        <Button
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancelNewTip"
            android:textAllCaps="false"
            android:background="@drawable/shape_cancel_button" />

    </LinearLayout>

</ScrollView>